--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.29.0",
     "react-typed": "^1.2.0",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "typed.js": "^2.0.12",
