--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.29.0",
     "react-typed": "^1.2.0",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
