--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passionclub-website",
+  "name": "passion-club-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
